# BlueWhaleEngine

./: BUILD.md  CMakeLists.txt  QUICKSTART.md  README.md  TESTING.md  V3_CONFIRMATION.txt  VERSION_2_UPGRADE.md  VERSION_3_SUMMARY.md
src/core/: zobrist.cpp
src/evaluation/: eval_advanced.h
src/search/: pondering.h
